<resources>
    <string name="app_name">Patient</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_account">New Account</string>
    <string name="user_name">User Name</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_masseges">Massages</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>