<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".ui.LoginActivity">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="200dp">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/groop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="24sp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/login"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_20ssp" />
</FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        android:layout_marginTop="98dp"
        android:layout_marginHorizontal="33dp"
        app:cardCornerRadius="5dp">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_shap"
            android:hint="@string/email"
            android:paddingStart="20dp"
            android:fontFamily="@font/roboto"
            android:textColorHint="@color/hint_color"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="33dp"
        app:cardCornerRadius="5dp">
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_shap"
            android:paddingStart="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:textColorHint="@color/hint_color"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="38dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/forgot_password"
        android:textColor="@color/text_color"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:background="@drawable/button"
        android:text="@string/login" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/create_new_account"
        android:textColor="@color/text_color"
        android:textSize="16sp" />


</LinearLayout>