<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".ui.LoginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/groop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="24sp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/new_account"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_20ssp" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="33dp"
        app:cardCornerRadius="5dp">
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_shap"
            android:paddingStart="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:hint="@string/user_name"
            android:textColorHint="@color/hint_color"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="33dp"
        app:cardCornerRadius="5dp">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_shap"
            android:hint="@string/email"
            android:paddingStart="20dp"
            android:fontFamily="@font/roboto"
            android:textColorHint="@color/hint_color"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="33dp"
        app:cardCornerRadius="5dp">
        <EditText
            android:id="@+id/edt_phone_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_shap"
            android:paddingStart="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:hint="Phone Number"
            android:textColorHint="@color/hint_color"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="33dp"
        app:cardCornerRadius="5dp">
        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_shap"
            android:paddingStart="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:hint="Address"
            android:textColorHint="@color/hint_color"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="33dp"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:text="Gender:"
                android:textColorHint="@color/hint_color"
                android:layout_gravity="center_vertical"
                tools:ignore="RtlSymmetry" />
            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_mail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/roboto"
                    android:text="male"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="0dp"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/roboto"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="female" />


            </RadioGroup>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="33dp"
        app:cardCornerRadius="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto"
                android:text="Date of Birth: "
                android:paddingStart="20dp"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txt_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/text"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto"
                android:paddingStart="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/img_dob"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:src="@drawable/calendar" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="33dp"
        app:cardCornerRadius="5dp">
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_shap"
            android:paddingStart="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:textColorHint="@color/hint_color"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="33dp"
        app:cardCornerRadius="5dp">
        <EditText
            android:id="@+id/edt_retype_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_shap"
            android:paddingStart="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:hint="Retype password"
            android:textColorHint="@color/hint_color"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:fontFamily="@font/roboto"
        android:text="Create Account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>